# cmake-cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
docs/: Doxyfile.in
lib/: CMakeLists.txt
lib/include/foo/: foo.h
lib/src/: foo.cpp
lib/test/: CMakeLists.txt
test/: CMakeLists.txt  test_factorial.cpp
test/include/test/: util.h
